[gd_scene load_steps=7 format=3 uid="uid://bm23431dvyotu"]

[ext_resource type="Script" path="res://scripts/Screens.gd" id="1_b1wbe"]
[ext_resource type="Texture2D" uid="uid://dw4g324aa2bix" path="res://assets/textures/ui/gear.png" id="2_25fd0"]
[ext_resource type="PackedScene" uid="uid://2giv2kj0a1s6" path="res://scenes/title_screen.tscn" id="2_78p2d"]
[ext_resource type="PackedScene" uid="uid://v102jyatyi7e" path="res://scenes/pause_screen.tscn" id="4_qca73"]
[ext_resource type="PackedScene" uid="uid://dpwb02ypu3tqm" path="res://scenes/game_over_screen.tscn" id="5_2dh65"]

[sub_resource type="LabelSettings" id="LabelSettings_3fcn3"]

[node name="Screens" type="CanvasLayer"]
script = ExtResource("1_b1wbe")

[node name="Debug" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBG" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="BuildNumLabel" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_top = 17.0
offset_right = 253.0
offset_bottom = 51.0
grow_horizontal = 2
text = "Build 0.1.0"

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 50.0
offset_right = -17.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_3fcn3")
autowrap_mode = 3

[node name="ToggleConsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 50.0
grow_vertical = 0
texture_normal = ExtResource("2_25fd0")
ignore_texture_size = true
stretch_mode = 0

[node name="TitleScreen" parent="." instance=ExtResource("2_78p2d")]
visible = false

[node name="PauseScreen" parent="." instance=ExtResource("4_qca73")]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource("5_2dh65")]
visible = false

[connection signal="pressed" from="Debug/ToggleConsole" to="." method="_on_toggle_console_pressed"]
